# rosc3

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-c3
.roo/: rules.md
config/: Kconfig.projbuild.en  Kconfig.projbuild.zh  README.md
docs/: COMMON_MODULES_SUMMARY.md  HARDWARE_CONNECTION.md  MENUCONFIG_I18N_DESIGN.md  MENUCONFIG_I18N_MAINTENANCE.md  MENUCONFIG_I18N_QUICKSTART.md  MENUCONFIG_I18N_TEST_REPORT.md  PLATFORMIO_ARCHITECTURE_DESIGN.md  PROJECT_STATUS.md
include/: lv_conf.h
src/: CMakeLists.txt  idf_component.yml  lvgl_demo_ui.c  lvgl_demo_ui.h  main.c
src/common/config/: README_RUNTIME_UPDATE.md  config_example.c  config_manager.c  config_manager.h  config_runtime_example.c
src/common/diagnostic/: README.md  diagnostic.c  diagnostic.h  diagnostic_example.c
src/common/i2c_manager/: README.md  i2c_manager.c  i2c_manager.h
src/common/oled/: README.md  oled_display.c  oled_display.h  oled_display_example.c  oled_ui.c  oled_ui.h  oled_ui_README.md  oled_ui_custom_README.md  oled_ui_custom_example.c  oled_ui_example.c
src/common/ros_comm/: README.md  micro_ros_transport.c  micro_ros_transport.h  ros_comm.c  ros_comm.h  ros_comm_example.c  ros_comm_pub_sub_example.c
src/common/wifi_manager/: wifi_manager.c  wifi_manager.h
tools/: menuconfig_lang.py  validate_kconfig.py
任务分解-v2/: 任务分解-NODE-01-底盘控制.md  任务分解-NODE-02-升降机构.md  任务分解-NODE-03-环境监测.md  任务分解-NODE-04-喷涂监控.md  任务分解-NODE-05-距离测量.md  任务分解-NODE-06-IMU姿态.md  任务分解-NODE-07-电源管理.md  任务分解-系统集成和测试.md  任务分解-通用基础模块.md
(+16 files in other folders)
